-
Bug
-
Resolution: Fixed
-
P2: Important
-
5.15.2
-
None
-
-
589d0ee47 (dev), 0dd96b57b (6.5), dc954e703 (6.6), 180051347 (tqtc/lts-6.2)
When enabling reuseItems in a ListView, fetchMore only fetches items once instead of multiple times as it does when reuseItems is false.
In the example just scroll up. You will only get up to 199, while with reuseItems set to false, you can get infinitely far.
- relates to
-
QTBUG-95105 ListView doesn't rerender all items when item pooling is enabled
-
- Reported
-
- resulted from
-
QTBUG-80507 ListView: implement support for delegate item recycling
-
- Closed
-